k8s/overlays/prod/patches/route-hosts-api.yaml
# k8s/overlays/prod/patches/route-hosts-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway
spec:
  host: api.family-hobbies.fr
