k8s/overlays/prod/patches/route-hosts-frontend.yaml
# k8s/overlays/prod/patches/route-hosts-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: family-hobbies.fr
